# top-papers-graph

./: .dockerignore  .env.example  .gitignore  .gitmodules  APPLY_FIX_AFTER_GITHUB_DESKTOP_CONFLICT_RU.md  ASSETS_MULTIMODAL_INGEST_FIX_RU.md  AUTHOR_SUFFIX_FIX_REPORT_RU.md  CHANGELOG.md  DATASPHERE_DPO_ATTN_AUTO_FIX_RU.md  DATASPHERE_DPO_CUDA_OOM_MEMORY_GUARD_FIX_RU.md  DATASPHERE_DPO_RUN_CONFIG_PATH_SERIALIZATION_FIX_RU.md  DATASPHERE_DPO_SINGLETON_IMAGE_COLUMN_FIX_RU.md  DATASPHERE_DPO_VLM_PRECOMPUTE_REF_FIX_RU.md  DATASPHERE_FULL_DDP_UNUSED_PARAMETERS_REAPPLIED_FIX_RU.md  DATASPHERE_FULL_GRPO_TRUNCATION_GUARD_FIX_RU.md  DATASPHERE_FULL_SFT_DDP_STRAGGLER_FIX_RU.md  DATASPHERE_FULL_SFT_MODEL_CARD_ENCODING_FIX_RU.md  DATASPHERE_G2_2_OOM_MEMORY_SAFE_IMAGE_CAP_FIX_RU.md  DATASPHERE_GRPO_EVAL_GENERATION_BATCH_FIX_RU.md  DATASPHERE_SFT_BEST_CHECKPOINT_AND_FULL_DATA_FIX_RU.md  DATASPHERE_SMOKE_ASSISTANT_ONLY_LOSS_FIX_RU.md  DATASPHERE_SMOKE_CHAT_TEMPLATE_RATE_LIMIT_FIX_RU.md  DATASPHERE_SMOKE_CUDA_JOBID_FIX_REPORT_RU.md  DATASPHERE_SMOKE_DDP_UNUSED_PARAMETERS_FIX_RU.md  DATASPHERE_SMOKE_ENV_RESOLUTION_FIX_RU.md  DATASPHERE_SMOKE_EVAL_IMAGES_COLUMN_FIX_RU.md  DATASPHERE_SMOKE_GRPO_FSDPMODULE_COMPAT_FIX_RU.md  DATASPHERE_SMOKE_GRPO_NUM_GENERATIONS_AND_JOBID_FIX_RU.md  DATASPHERE_SMOKE_GRPO_TEXT_ONLY_IMAGE_FILTER_FIX_RU.md  DATASPHERE_SMOKE_GRPO_ZERO_LOSS_FIX_RU.md  DATASPHERE_SMOKE_IMAGE_PLACEHOLDER_ALIGNMENT_FIX_RU.md  DATASPHERE_SMOKE_SFT_CHAT_TEMPLATE_HARDENING_RU.md  DATASPHERE_TRAINING_EFFICIENCY_FIX_REPORT_RU.md  DATASPHERE_VLM_FULL_PIPELINE_PATCH_REPORT_RU.md  DATASPHERE_VLM_JOBS_FIX_REPORT_RU.md  Dockerfile  IMPROVEMENTS_EXPERT_PIPELINE.md  INPUT_RETENTION_COLLISION_FIX_REPORT_RU.md  INPUT_RETENTION_FIX_REPORT_RU.md  KAGGLE_LOG_FIXES_RU.md  (+56 more)
configs/: meta_example.json
configs/checklists/: generic.md
configs/datasphere/: task3_case_based_blind_ab_job.config.yaml
configs/domains/: science.yaml
course/: README.md
course/weeks/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md  week11.md  week12.md
data/demo/: hypothesis_demo_cases.json
data/gold/: README.md
docker/: entrypoint.sh
docs/: TASK3_AB_CASE_BASED_OVERVIEW_RU.md  TASK3_AB_CREATOR_DETAILED_TUTORIAL_RU.md  TASK3_AB_CREATOR_FORM_FILLING_TUTORIAL_RU.md  TASK3_AB_HARD_SUBSET_TUTORIAL_RU.md  TASK3_AB_PARTICIPANT_DETAILED_TUTORIAL_RU.md  TASK3_EXPERT_DEMO_SESSION_FACILITATOR_CHEATSHEET_RU.md  agents4science_submission_tutorial.md  architecture.md  artifacts.md  e2e_pipeline.md  expert_scaling_playbook.md  feedback_loop_one_click_ingestion.md  gnn.md  integrations.md  paper_metadata_schema.md  plan_12weeks.md  quality_pipeline.md  quickstart.md  roles.md  scidatapipe_bridge.md  smolagents.md  sources.md  temporal_multimodal_upgrade.md  tutorial.md
examples/battery_fastcharge/: README.md
examples/task2_validation_inputs/: README_windows_zip_note.txt  kubrakova_ekaterina_aleksandrovna__fd546d60da0c - Екатерина Кубракова.yaml
examples/task3_ab_case_manifests/: task3_ab_case_manifest.filled - #U0410#U0440#U0442#U0435#U043c #U0412#U0430#U0441#U0438#U043d.json  task3_ab_case_manifest.filled - #U0415#U043a#U0430#U0442#U0435#U0440#U0438#U043d#U0430 #U041a#U0443#U0431#U0440#U0430#U043a#U043e#U0432#U0430.json  task3_ab_case_manifest.filled - Дмитрий Высоких.json
examples/uploaded_expert_artifacts/: nosyrev_andrei_nikolaevich__e5b216debb5c - тХи├ЙтХитХЬтХитФдтХд├ЗтХитХбтХитХг тХи┬етХитХЫтХд├╝тХд├птХд├ЗтХитХбтХитЦУ.yaml  shevchenko_ol_ga_vital_evna__921b61e5f476 - тХитВзтХитХЧтХд├Е тХи┬┐тХитХбтХитЦУтХд├зтХитХбтХитХЬтХитХСтХитХЫ.yaml  task1_reasoning_trajectories_form(2).ipynb  task2_validation_temporal_graph_fixed_v11_fixed(2).ipynb  zamorin_denis_aleksandrovich__37ab71be5e40 - тХи├╢тХитХбтХитХЬтХитХХтХд├╝ тХи├ЙтХитХЧтХитХбтХитХСтХд├╝тХитЦСтХитХЬтХитФдтХд├ЗтХитХЫтХитЦУтХитХХтХд├з.yaml
experiments/vlm_finetuning/: DESIGN_RU.md  EXPERIMENT_PLAN_RU.md  LARGE_MODEL_AND_DISTILLATION_RU.md  (+2 more)
notebooks/: task1_reasoning_trajectories_form_colab.ipynb  task2_temporal_graph_validation_colab.ipynb  task2_validation_temporal_graph.ipynb  task3_ab_testset_authoring_colab.ipynb  task3_case_based_blind_ab_kaggle_cli_launcher.ipynb  task3_dual_local_models_blind_ab_colab.ipynb  task3_dual_local_models_blind_ab_kaggle_gdown_script.ipynb  task3_dual_local_models_blind_ab_kaggle_gdown_script_fixed.ipynb  task3_dual_local_models_blind_ab_kaggle_offline.ipynb  top_papers_graph_task3_hf_benchmark_colab.ipynb
reports/: build_summary.txt  deep-research-report-2026-06-20.md  deep-research-report-2026-06-21.md  dpo_build_summary.txt
results/: README.md
scireason/: __init__.py
scripts/: bootstrap.ps1  bootstrap.sh  import_top_papers_json.py  install_pyg_extensions.ps1  install_pyg_extensions.sh
tests/: conftest.py  test_assertion_scorer.py  test_audit_full_data_usage.py  test_charging_profiles.py  test_chunk_contracts.py  test_datasphere_job_configs.py  test_debate_smoke.py  test_expert_cards.py  test_expert_report.py  test_gnn_optional.py  test_graph_candidate_agent_hardening.py  test_hf_export_smoke_sampling.py  test_llm_json_repair.py  test_local_vlm_timeout_config.py  test_local_vlm_worker.py  test_local_vlm_worker_cpu_fallback.py  test_memory_regressions.py  test_paddle_langchain_compat.py  test_paddle_out_of_box_install.py  test_paddle_subprocess_isolation.py  test_qdrant_hybrid.py  test_qdrant_store.py  test_qdrant_store_compat.py  test_scidatapipe_bridge.py  test_scidatapipe_input_retention.py  test_scireason_alignment_dataset_v2.py  test_smolagents_backend_integration.py  test_task1_offline_form.py  test_task2_graph_viz_selfloops.py  test_task2_llm_selection.py  test_task2_notebook_archive_bootstrap.py  test_task2_notebook_compat.py  test_task2_notebook_full_pipeline_guard.py  test_task2_out_of_box_defaults.py  test_task2_pdf_resolution.py  test_task2_pipeline_regressions.py  test_task2_progress_and_timeout.py  test_task2_topology_and_filters.py  test_task2_validation.py  test_task2_vlm_fallback.py  (+14 more)
utils/: README.md  config.yaml  task3_ab_case_manifest.filled.json
(+438 files in other folders)
