[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "top-papers-graph"
version = "0.3.0"
description = "top-papers-graph: scientific paper discovery + knowledge graphs (GraphRAG) + expert supervision"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="top-papers-graph contributors"}]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "networkx>=3.3",
  "neo4j>=5.20",
  "qdrant-client>=1.9",
  "langchain-core>=0.2",
  "langgraph>=0.1",
  "litellm>=1.0",
]

[project.optional-dependencies]
mm = [
  "pymupdf>=1.24",
  "pillow>=10.0",
  "open_clip_torch>=2.24",
  "torch>=2.2",
  "transformers>=4.44",
  "accelerate>=0.33",
  "sentencepiece>=0.2",
]

temporal = [
  "python-dateutil>=2.9",
  "dateparser>=1.2",
]

api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

mcp = [
  "mcp>=1.0.0",
]

battery = [
  "pybamm>=25.12.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests",
  "pre-commit>=3.7",
  "streamlit>=1.36",
  "ragas>=0.1.15",
  "deepeval>=3.0"
]

[project.scripts]
top-papers-graph = "scireason.cli:app"
scireason = "scireason.cli:app"
top-papers-graph-api = "scireason.api.main:main"
top-papers-graph-mcp = "scireason.mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.packages.find]
where = ["src"]
